--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body {
     color: white;
     background-color: var(--clr-primary);
     font-family: sans-serif;
+    padding: 0.6rem;
+    min-height: 100vh;
+    position: relative;
 }
 
 .header {
@@ -45,8 +48,63 @@ body {
 main {
     display: grid;
     place-items: center;
-    padding: 0.6rem;
     width: 100%;
+}
+
+.result__overlay {
+    background: hsl(0, 0%, 9%);
+    opacity: 0.8;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+
+    display: none;
+}
+
+.result__modal {
+    background-color: var(--clr-secondary);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    padding: 2rem;
+    border-radius: 0.6rem;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.3);
+    min-width: 320px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+
+    display: none;
+}
+
+.result__modal-actions {
+    padding-top: 2rem;
+    display: inline-flex;
+    gap: 1rem;
+}
+
+.btn {
+    border: none;
+    border-radius: 0.5rem;
+    outline: none;
+    padding: 1rem;
+    width: 130px;
+    font-size: 1rem;
+    font-weight: bold;
+    color: var(--clr-primary);
+}
+
+.next {
+    background-color: var(--clr-orange);
+}
+
+.leave {
+    background-color: var(--clr-neutral);
 }
 
 .gameboard__section {
@@ -65,10 +123,13 @@ main {
     background-color: var(--clr-secondary);
     border-radius: 0.5rem;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.3);
+    font-size: 4rem;
+    cursor: pointer;
+    transition: all 0.4s;
 }
 
-.cell-content {
-    font-size: 4rem;
+.cell.available:hover {
+    background-color: #484c51;
 }
 
 .info__section {
